# CoDeepSeedeX

./: .gitignore  LICENSE  OPERATIONS.md  README.md  README.zh-CN.md  REGRESSION.md  TROUBLESHOOTING.md  bootstrap.sh  health_check.sh  pyproject.toml
codexchange_proxy/: app.py  cli.py  mcp_stdio.py
config/: pricing.json
deepseek_responses_proxy/: __init__.py  app.py  cli.py  mcp_stdio.py  terminal_tui.py
docs/: architecture.en.md  architecture.zh-CN.md  codexchange-hardcut-plan.json  codexchange-hardcut-plan.md  custom_api_handoff.md  developer-handbook.md  developer-handbook.zh-CN.md  development-log.md  handoff-for-developers.en.md  handoff-for-developers.zh-CN.md  install.en.md  install.zh-CN.md  provider-adapter-contract.md  provider-live-smoke-evidence.md  real-long-session-validation.md  release-checklist.en.md  release-checklist.zh-CN.md  release-notes-v0.1.0-alpha.en.md  release-notes-v0.1.0-alpha.zh-CN.md  release-notes-v0.2.0-alpha.en.md  release-notes-v0.2.0-alpha.zh-CN.md  release-notes-v0.3.0-alpha.en.md  release-notes-v0.3.0-alpha.zh-CN.md  release-notes-v0.3.5-alpha.en.md  release-notes-v0.3.5-alpha.zh-CN.md  release-notes-v0.3.9-alpha.md  release-notes-v2.6a1.en.md  release-notes-v2.6a1.zh-CN.md  release-notes-v2.6a2.en.md  release-notes-v2.6a2.zh-CN.md  security.en.md  security.zh-CN.md  troubleshooting.en.md  troubleshooting.zh-CN.md  upgrade.en.md  upgrade.zh-CN.md  usage.en.md  usage.zh-CN.md  user-tool-control-policy.zh-CN.md
scripts/: audit-ghost-contracts.py  codex-wrapper.bash  cox-config  cox-start  cox-start-reasoning  cox-status  (+15 more)
(+106 files in other folders)
