[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-responses-proxy"
version = "0.3.8a0"
description = "Minimal FastAPI OpenAI Responses-compatible proxy for DeepSeek ChatCompletions"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
dsproxy = "deepseek_responses_proxy.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["deepseek_responses_proxy*"]
