[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codexchange"
version = "0.4.8a0"
description = "CodeXchange (CoX): local OpenAI Responses-compatible provider exchange for Codex"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "uvicorn>=0.30.0",
  "tokenizers>=0.15.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
cox = "codexchange_proxy.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["codexchange_proxy*"]
